tests/tooling/fixtures/native/recovery/positive/message_send_nil_alias_identifier_elision.objc3
// Positive fixture: nil-provenance alias identifier receiver elides runtime dispatch.
module MessageSendNilAliasIdentifierElision;

fn main() {
  let receiver = nil;
  let alias = receiver;
  let sent = [alias ping];
  return sent + 21;
}
