tests/tooling/fixtures/native/recovery/negative/negative_assignment_parser_missing_compound_rhs.objc3
// Expected diagnostic code(s): O3P103.
module NegativeAssignmentParserMissingCompoundRhs;

fn main() -> i32 {
  let value = 1;
  value += ;
  return value;
}